Thu Apr  7 20:03:52 2011  Tanaka Akira  <akr@fsij.org>

	* include/ruby/io.h: parenthesize macro arguments.

Wed Apr  6 21:08:31 2011  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h: parenthesize macro arguments.

Wed Apr  6 15:12:40 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_pkey_dh.c (ossl_dh_initialize):
	  pop pushed error after each try of reading. fixes #4550

	* ext/openssl/ossl_pkey_dsa.c (ossl_dsa_initialize): ditto.

	* ext/openssl/ossl_pkey_ec.c (ossl_ec_initialize): ditto.

Wed Apr  6 11:36:44 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_pkey_rsa.c (ossl_rsa_initialize):
	  pop pushed error after each try of reading. fixes #4550

Tue Apr  5 20:33:43 2011  Tanaka Akira  <akr@fsij.org>

	* include/ruby/encoding.h: parenthesize macro arguments.

Mon Apr  4 22:02:16 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/io/nonblock/nonblock.c (io_nonblock_set): Avoid F_SETFL if
	  we're not changing the O_NONBLOCK bit. F_SETFL is an expensive
	  operation since it needs to affect all processes with the same
	  file object.
	  The patch is written by Eric Wong. [ruby-core:35556]

Mon Apr  4 21:41:26 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (rb_io_syswrite): While local FS writes are usually
	  buffered, the buffers can be full or the file opened with
	  O_SYNC. IO#syswrite can also be used on blocking IOs
	  (pipe/socket) just like IO#write.
	  The patch is written by Eric Wong. [ruby-core:35554]

Mon Apr  4 11:50:40 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/test_tempfile.rb: simply ignore platform dependent testcases
	  instead of skipping.

Sun Apr  3 22:52:22 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* ext/syslog/syslog.c: improve rdoc.
	  a patch by Jonas Pfenniger. [ruby-core:35592] fixes #4545

Sun Apr  3 22:10:09 2011  Tanaka Akira  <akr@fsij.org>

	* ext/zlib/zlib.c: parenthesize macro arguments.
