@@ -1,3 +1,9 @@
+Fri Apr  8 16:01:56 2011  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* ext/stringio/stringio.c (strio_getline): check whether str is
+	  a string when str and lim are given.
+	  https://twitter.com/watson1978/status/56225052152168449
+
 Thu Apr  7 20:03:52 2011  Tanaka Akira  <akr@fsij.org>
 
 	* include/ruby/io.h: parenthesize macro arguments.
